<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cineflix_red"
        android:title="@string/favoritos"
        android:titleTextColor="@color/cineflix_white" />

    <TextView
        android:id="@+id/textVazioFavoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nenhum_favorito"
        android:gravity="center"
        android:padding="24dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFavoritos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonExportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/exportar_lista"
        android:backgroundTint="@color/cineflix_red"
        android:textColor="@color/cineflix_white" />

</LinearLayout>
